# obcam

./: .editorconfig  .gitignore  .pre-commit-config.yaml  404.html  README.md  glm.py  index.html  install.sh  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: deploy_pages.yml
checklist/: index.html
docs/: checklist.md  flightcam.md  index.md  scripts.md  setting.md  setup.md
docs/en/: mkdocs.yml
docs/en/docs/: checklist.md  flightcam.md  index.md  scripts.md  setting.md  setup.md  troubleshooting.md
docs/ja/: mkdocs.yml
docs/ja/docs/: checklist.md  flightcam.md  index.md  scripts.md  setting.md  setup.md  troubleshooting.md
docs/res/: flightcam.drawio
eagle/cad/: obcam.brd  obcam.sch  obcamera.brd  obcamera.sch
eagle/lib/: 2022_nse.lbr  rpi-zero.lbr
flightcam/: index.html
ja/: 404.html  index.html  sitemap.xml
ja/checklist/: index.html
ja/flightcam/: index.html
ja/scripts/: index.html
ja/search/: search_index.json
ja/setting/: index.html
ja/setup/: index.html
ja/troubleshooting/: index.html
obcam/: __init__.py  cli.py  glm.py  recorder.py  util.py
scripts/: activate_camera.sh  activate_flightcam.sh  build_docs.sh  deactivate_flightcam.sh  expand_swap.sh  index.html  install_obcam.sh  install_pip.sh  uninstall_obcam.sh
search/: search_index.json
setting/: index.html
setup/: index.html
troubleshooting/: index.html
