[tool.poetry]
name = "obcam"
version = "0.2.4"
description = "Flight camera module and program for the OB team rocket in NSE 2022."
authors = ["Yunhyeon Jeong <jjj999to@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
gileum = "^0.2.2"
picamera = {git = "https://github.com/waveform80/picamera"}
colorzero = "^2.0"

[tool.poetry.dev-dependencies]
mkdocs-material = "^8.3.9"
pre-commit = "^2.20.0"
pytest = "^7.1.2"

[tool.poetry.scripts]
obcam = "obcam.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
